# UmoyaPool

./: .gitignore  DECK.md  DEPLOY_CANTON.md  DEVNET.md  PRIVACY.md  README.md  SUBMISSION.md  daml.yaml  package.json
backend/: .env.example  package-lock.json  package.json
backend/src/: config.ts  index.ts  seed.ts  server.ts  types.ts
backend/src/middleware/: auth.ts  error.ts  validate.ts
backend/src/routes/: agent.routes.ts  auth.routes.ts  marketplace.routes.ts  payment.routes.ts  stokvel.routes.ts  vault.routes.ts
backend/src/services/: agent-registry.service.ts  auth.service.ts  marketplace.service.ts  payment.service.ts  stokvel.service.ts  vault.service.ts
backend/src/storage/: persistence.ts  register.ts
backend/src/utils/: amounts.ts  http-error.ts  logger.ts
contracts/: Cargo.toml  README.md
contracts/.cargo/: config.toml
contracts/deploy/: deploy.mjs  deployment.public.json  verify.mjs
contracts/vault/: Cargo.toml
contracts/vault/src/: error.rs  lib.rs  shares.rs  storage.rs  test.rs  types.rs
daml/UmoyaPool/: PrivacyDemo.daml  Setup.daml  Stokvel.daml  Types.daml  Vault.daml
frontend/: index.html  package-lock.json  package.json  shoot.mjs
frontend/src/: App.tsx  index.css
frontend/src/components/: ConnectModal.tsx  Layout.tsx
frontend/src/context/: WalletContext.tsx
frontend/src/lib/: api.ts  useApi.ts
frontend/src/pages/: AgentsPage.tsx  LandingPage.tsx  PortfolioPage.tsx  StokvelPage.tsx  StrategiesPage.tsx  VaultsPage.tsx
