[package]
name = "vault"
version = "0.1.0"
edition = "2021"
description = "UmoyaPool shared yield engine — ERC4626-style shares with on-chain guardrails"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
